--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,2 @@
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
-SETTINGS_ENCRYPTION_KEY=
-ADMIN_EMAILS=
+VITE_SUPABASE_URL=
+VITE_SUPABASE_ANON_KEY=
